# ddd-service-example

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  copy_tool.py  gunicorn.conf.py  pyproject.toml  requirements.txt  requirements_local.txt  requirements_test.txt  startup.sh  tox.ini
alembic/: env.py
alembic/versions/: 20250808_1158-c9d6f36ee963_init.py
app/: config.py  logger.py  message_queue_consumer.py  middleware.py  package_instance.py  restful_server.py  trace.py
app/adapter/: __init__.py
app/adapter/controller/: __init__.py  base.py
app/adapter/controller/your_bounded_context/: request.py  response.py  your_aggregate_controller.py
app/adapter/event_handler/: __init__.py  helper.py  your_aggregate_event_handler.py
app/adapter/repository/: base.py  your_aggregate_repository.py
app/adapter/repository/orm/: __init__.py  base.py  domain_event_model.py  your_aggregate_model.py
app/core/ddd_base/: __init__.py  aggregate.py  domain_event.py  event_bus.py  exception.py  use_case.py
app/core/your_bounded_context/domain/: event.py  exception.py  repository.py
app/core/your_bounded_context/use_case/: your_aggregate_use_case.py
app/port/message_queue/: __init__.py
app/port/message_queue/your_exchange/: payload.py  your_exchange_handler.py
app/port/restful/: __init__.py  format_checker.py  response.py
app/port/restful/handler/: health.py  token.py
app/port/restful/openapi/: api.yml
app/port/restful/openapi/paths/: health.yml
app/port/storage/sql/: postgres.py
tests/: conftest.py
tests/utils/: rabbitmq_test_helper.py
(+17 files in other folders)
